// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PinnedActivityBar component should render if it is being previewed 1`] = `
<PinnedActivityBar
  activityId={1}
  classroomUnitId={2}
  isBeingPreviewed={true}
  onShowPreviewModal={[Function]}
>
  <div
    className="pinned-activity"
    role="status"
  >
    <span />
    <button
      aria-label="Join undefined"
      className="quill-button medium primary contained focus-on-dark"
      onClick={[Function]}
      type="button"
    >
      Join
    </button>
  </div>
</PinnedActivityBar>
`;

exports[`PinnedActivityBar component should render if it is not being previewed 1`] = `
<PinnedActivityBar
  activityId={1}
  classroomUnitId={2}
  isBeingPreviewed={false}
  onShowPreviewModal={[Function]}
>
  <div
    className="pinned-activity"
    role="status"
  >
    <span />
    <a
      aria-label="Join undefined"
      className="quill-button medium primary contained focus-on-dark"
      href="/activity_sessions/classroom_units/2/activities/1"
    >
      Join
    </a>
  </div>
</PinnedActivityBar>
`;
